# DNA

./: README.md  pyproject.toml
configs/: expression.yaml  small.yaml
scripts/: make_toy_expression_csv.py  make_toy_fasta.py
src/dna_llm/: __init__.py  config.py  data.py  expression_data.py  expression_model.py  model.py  tokenizer.py  train.py  train_expression.py
tests/: test_config.py  test_data.py  test_expression_data.py  test_tokenizer.py
