[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-llm"
version = "0.1.0"
description = "Minimal toolkit for DNA language-model pretraining and multimodal expression prediction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
dna-llm-pretrain = "dna_llm.train:main"
dna-llm-train-expression = "dna_llm.train_expression:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
